# FaceForensicsDataProcessing

./: .pre-commit-config.yaml  README.md  compress.py  extract_bounding_boxes.py  extract_images_from_FaceForensics_dataset.py  pyproject.toml  utils.py
src/faceforensics_internal/: __init__.py  extract_bounding_boxes.py  file_list_dataset.py  utils.py
src/faceforensics_internal/scripts/: aggregate_masks_and_face_locations.py  create-ff-filestructure-for-dfdc-data.py  create_file_list.py  create_file_list_AIF.py  create_split_json.py  extract_bounding_boxes.py  extract_compressed_videos.py  extract_face_locations.py  extract_faces_from_bounding_boxes.py  extract_faces_tracked_from_bounding_boxes.py  extract_mask_bounding_boxes.py  migrate_bounding_boxes_to_face_information.py  resample_videos.py  resize_face_images.py
src/faceforensics_internal/splits/: __init__.py  test.json  test_aif.json  train.json  train_dfdc.json  train_ff_dfdc_google.json  val.json
